# multitasker

./: .gitignore  README.md  pyproject.toml  setup.py
multitasker/: __init__.py  __version__.py  base.py  exceptions.py  filesystem.py  multitasker.py  progress.py
multitasker/cli/: create_db.py  main.py
multitasker/common/: event.py
multitasker/models/: base.py  constants.py  enums.py  task.py
multitasker/multi_worker/: __init__.py  enums.py  models.py  multi_worker.py
tests/: main.py  test_base.py  test_multitasker.py
