[tool.poetry]
name = "multitasker"
version = "0.0.2.1"
description = "多任务处理器"
authors = ["wxnacy <wxnacy@gmail.com>"]
license = "MIT"
# packages = [
    # { include = "multitasker" },
# ]

[tool.poetry.scripts]
multitasker = "multitasker.cli.main:app"

[tool.poetry.dependencies]
python = "^3.6.1"
SQLAlchemy = "^1.4.35"
rich = "^10.6.0"
wpy = "^0.6.1"
typer = "^0.4.1"
pydantic = "^1.9.0"
gevent = "^21.12.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
