[tool.poetry]
name = "multitasker"
version = "0.0.6"
description = "多任务处理器"
authors = ["wxnacy <wxnacy@gmail.com>"]
license = "MIT"

[tool.poetry.scripts]
multitasker = "multitasker.cli.main:app"

[tool.poetry.dependencies]
python = "^3.10"
SQLAlchemy = "^1.4.36"
rich = "^12.3.0"
wpy = "^0.7.1"
typer = "^0.4.1"
pydantic = "^1.9.0"
gevent = "^21.12.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
Sphinx = "^4.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
